2009-07-09  Scott James Remnant  <scott@netsplit.com>

	* util/utmp.c (utmp_write_runlevel): Don't write 'N' to utmp or
	wtmp for the previous runlevel, this will force writing reboot
	records if prevlevel='N'/0 since read_runlevel will always return
	'N' in that case.
	* util/tests/test_utmp.c (test_write_runlevel): Add test case for
	passing 'N' and having it treated as zero
	(test_read_runlevel): Add a couple of test cases for the problems
	we found last night where shutdown and corrupt utmp records result
	in the wrong data being returned.
	* util/tests/test_sysv.c (test_change_runlevel): Add a test case
	for switching from sysinit to the first runlevel

	* init/conf.h,
	* init/control.h,
	* init/event.h,
	* init/job_class.h: Variable declarations in header files need to
	be prefixed with "extern", the NIH_BEGIN_EXTERN stuff only applies
	to C++.

	* util/reboot.c: Reboot can't write the shutdown time before
	calling shutdown, otherwise shutdown won't be able to get the
	current runlevel anymore.
	* util/man/reboot.8: Update, we don't write the shutdown time
	before calling shutdown - it's up to the shutdown scripts to
	call reboot -w before remounting the root filesystem.

	* util/tests/test_utmp.c (test_get_runlevel): Replace test case
	with one that expects 'N' rather than fall-through.
	* util/tests/test_sysv.c (test_change_runlevel): Expect N when
	there is no previous runlevel

	* util/utmp.c (utmp_read_runlevel): Also catch a zero runlevel from
	utmp, replacing with 'N' - these functions should never return 0
	* util/sysv.c (sysv_change_runlevel): Should set prevlevel to N
	when we don't find one

	* util/utmp.c (utmp_read_runlevel): Catch a negative runlevel from
	corrupt utmp data, convert to 'N'
	(utmp_get_runlevel): Return N when RUNLEVEL is set but empty,
	rather than falling through

	* util/telinit.c: Catch a missing argument separately so we don't
	output "(null)"

	* README: Update requirements.
	* TODO: Update.
